# sdk-nrf

./: CODEOWNERS  west.yml
.github/workflows/: docbuild.yml
applications/asset_tracker_v2/: CMakeLists.txt  overlay-debug.conf  overlay-memfault.conf  overlay-nrf7002ek-wifi-scan-only.conf  overlay-solar.conf  overlay-thingyworld-thingy91x.conf  prj.conf
applications/at_client_flash_test/: prj.conf  sample.yaml
applications/connectivity_bridge/: CMakeLists.txt  README.rst  README_TEMPLATE.txt  prj.conf
applications/serial_lte_modem/: prj.conf
applications/thingy91v2_gnss_eval/: CMakeLists.txt  Kconfig  prj.conf  prj_nrf9160dk_nrf9160_ns.conf
cmake/: partition_manager.cmake
doc/_scripts/: connect_docsets.py
doc/_utils/: utils.py
doc/nrf/: links.txt
drivers/: CMakeLists.txt  Kconfig
drivers/i2c_virtual_eeprom/: CMakeLists.txt  Kconfig  virtual_eeprom.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/ina3221/: ina3221.c
include/: adp536x.h  app_jwt.h
include/conn_bridge_control/: control_client.h  control_common.h  control_host.h  control_regs.h
include/drivers/: virtual_eeprom.h
include/modem/: at_cme.h  at_cms.h  at_cne.h  location.h
include/net/: wifi_credentials.h  wifi_mgmt_ext.h
lib/: CMakeLists.txt  Kconfig
lib/adp536x/: adp536x.c
lib/app_jwt/: Kconfig  app_jwt.c
lib/conn_bridge_control/: Kconfig  (+3 more)
samples/: CMakeLists.txt
scripts/: requirements-west-thingy91x.txt  west-commands.yml
subsys/: CMakeLists.txt  Kconfig
tests/subsys/net/lib/app_jwt/: CMakeLists.txt  prj.conf
tests/subsys/net/lib/app_jwt/src/: main.c
(+385 files in other folders)
